# aws-elasticdrs-orchestrator

./: .bandit  .bashrc_additions  .cfn_nag_deny_list.yml  .cfn_upload_manifest.json  .cfnlintrc.yaml  .checkov.yaml  .clinerules  .codedefender  .deployment-trigger  .env.deployment.template  .env.dev.template  .env.example  .env.test  .env.test.template  .flake8  .git_commit_msg.txt  .git_milestone_commit.txt  .gitallowed  .gitignore  .gitlab-ci.yml  .kics-exclude  .kicsignore  .pipeline-test  .pre-commit-config.yaml  .secrets.baseline  ACCOUNT_AWARENESS_COMPLETE_SUMMARY.md  ACCOUNT_FILTERING_FIX_SUMMARY.md  API_GATEWAY_SPLIT_PLAN.md  AWS_DRS_TCO_Analysis_Fixed.pptx  CAMELCASE_MIGRATION_FINAL_SUMMARY.md  CAMELCASE_MIGRATION_TRACKING.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CHECKPOINT_Multi-Account-Prototype-1.0.md  CICD_RULES_SUMMARY.md  CLOUDFORMATION_DEPLOYMENT_ISSUES.md  CODEOWNERS  COMMIT_00f4eb3_ANALYSIS.md  COMMIT_242b696_ANALYSIS.md  COMPREHENSIVE_DRS_API_IMPLEMENTATION.md  (+228 more)
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
.github/: BRANCH_PROTECTION_SETUP.md  CODEOWNERS  pull_request_template.md
.kiro/: CLOUDSCAPE_MIGRATION_COMPLETE.md  GIT_WORKFLOW_ANALYSIS.md  GLOBAL_RULES_README.md  INTEGRATION_SUMMARY.md  MCP_CONFIGURATION.md  MORNING_INVESTIGATION_PLAN.md  ORCHESTRATION_LAMBDA_FIX.md  QUICK_REFERENCE.md  STEP_FUNCTIONS_REMOVAL_PLAN.md
buildspecs/: build-buildspec-minimal.yml  build-buildspec.yml  deploy-frontend-buildspec.yml  deploy-infra-buildspec-clean.yml  deploy-infra-buildspec.yml  security-buildspec.yml  test-buildspec.yml  validate-buildspec.yml
cfn/: api-auth-stack.yaml  api-gateway-core-methods-stack.yaml  api-gateway-core-stack.yaml  api-gateway-deployment-stack.yaml  api-gateway-infrastructure-methods-stack.yaml  api-gateway-operations-methods-stack.yaml  api-gateway-resources-stack.yaml  api-gateway-stack.yaml  api-stack-rbac.yaml  api-stack.yaml  api-stack.yaml.bak  codebuild-projects-stack.yaml  codecommit-stack.yaml  codepipeline-stack.yaml  cross-account-role-stack.yaml  database-stack-recreation.yaml  database-stack.yaml  drs-agent-installer-stack.yaml  drs-source-network-bucket-stack.yaml  drs-target-account-setup-stack.yaml  eventbridge-stack.yaml  frontend-stack.yaml  github-oidc-stack.yaml  lambda-stack.yaml  main-stack.yaml  master-template.yaml  master-template.yaml.backup  monitoring-stack.yaml  notification-stack.yaml  security-monitoring-stack.yaml  security-stack.yaml  waf-stack.yaml  (+4 more)
(+2545 files in other folders)
