[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-drs-orchestration"
version = "1.2.2"
description = "AWS Elastic Disaster Recovery Orchestration Platform"
authors = [
    {name = "AWS DRS Orchestration Team", email = "aws-drs-orchestration@amazon.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "crhelper>=2.0.11",
    "requests>=2.32.0",
    "pyjwt>=2.10.0",
    "python-dateutil>=2.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "moto>=5.0.0",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "bandit>=1.9.0",
    "semgrep>=1.146.0",
    "safety>=3.7.0"
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | archive
  | frontend
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["lambda", "scripts", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# asyncio_default_fixture_loop_scope = "function"  # Requires pytest-asyncio
markers = [
    "property: marks tests as property-based tests (slow, comprehensive)",
]
filterwarnings = [
    "ignore::DeprecationWarning:botocore.auth",
    "ignore::pytest.PytestDeprecationWarning"
]

[tool.coverage.run]
source = ["lambda"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/archive/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.bandit]
exclude_dirs = ["tests", "archive", "frontend"]
skips = ["B112"]  # Skip try-except-continue for now

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"]

[tool.semgrep]
config = ["auto"]
exclude = ["tests/", "archive/", "frontend/node_modules/"]